# Instagram---DRF-project

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
core/: __init__.py  settings.py  urls.py
src/User/: admin.py  email.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  user_profile_serializers.py  user_profile_views.py  views.py
src/User/migrations/: 0001_initial.py
src/comment/: admin.py  models.py  serializers.py  urls.py  views.py
src/comment/migrations/: 0001_initial.py
src/post/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/post/migrations/: 0001_initial.py
src/social_actions/: admin.py  apps.py  mixins.py  models.py  views.py
src/social_actions/migrations/: 0001_initial.py  0002_remove_followmodel_followed_user_id.py
tests/comment/: test_comment_CRUD.py  test_comment_models.py
tests/post/: test_post_CRUD.py  test_post_models.py
tests/social_actions/: test_follow_action.py  test_like_action.py  test_social_actions_models.py
tests/user/: test_models.py  test_user_profile.py  test_user_registration.py  test_user_update.py
